--- a/flask-project/templates/login.html
+++ b/flask-project/templates/login.html
@@ -2,16 +2,17 @@
 {% set active_page = 'login' %}
 {% block title %} Login {% endblock %}
 {% block content %} 
+<p>{{msg}}</p>
 <div class="w-50">
 <form method="post">
   {{ form.csrf_token }}
   <div class="mb-3">
 	<fieldset class="form-field">
-		{{ form.email.label(class="form-label") }}
-		{{ form.email(class="form-control") }}
-		{% if form.email.errors %}
+		{{ form.username.label(class="form-label") }}
+		{{ form.username(class="form-control") }}
+		{% if form.username.errors %}
             <ul class="errors">
-              {% for error in form.email.errors %}
+              {% for error in form.username.errors %}
 				`  <li>{{ error }}</li>
               {% endfor %}
             </ul>		   
