--- a/flask-project/templates/base.html
+++ b/flask-project/templates/base.html
@@ -47,6 +47,17 @@
       </div>
     </div>
   </nav>
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
   {% block content %}
   {% endblock %}
   <div id='stars'></div>
