--- a/flask-project/templates/home.html
+++ b/flask-project/templates/home.html
@@ -8,8 +8,8 @@
     <input type="date" name="date1"/>
   </label>
 
-  size
-  <input name="size"/>
+  size(1-20):
+  <input type="int" name="size"/>
   <button type="submit">submit</button>
 </form>
 <table class="table table-striped">
