--- a/flask-project/templates/register.html
+++ b/flask-project/templates/register.html
@@ -2,9 +2,11 @@
 {% set active_page = 'register' %}
 {% block title %} Register {% endblock %}
 {% block content %} 
-<text>
-    (Please register！)
-</text>
+
+{% if error %}
+<p class=error><strong>Error:</strong> {{ error }}
+{% endif %}
+
 <div class="w-50">
 <form method="post">
   {{ form.csrf_token }}
@@ -21,6 +23,12 @@
 	    {% endif %} 	
     </fieldset>
   </div>
+  <div class="mb-3">
+    <fieldset class="form-field">
+      {{ form.username.label(class="form-label") }}
+      {{ form.username(class="form-control") }} 	
+      </fieldset>
+    </div>
   <div class="mb-3">
 	<fieldset class="form-field">
 		{{ form.password.label(class="form-label") }}
